# cronymax

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  bunfig.toml  cspell.json  lefthook.yml  package.json  pixi.toml
.cronymax/agents/: Chat.agent.yaml  architect.agent.yaml  coder.agent.yaml  critic.agent.yaml  pm.agent.yaml  product.agent.yaml  qa-critic.agent.yaml  qa.agent.yaml  rd.agent.yaml
.cronymax/doc-types/: bug-report.md  code-description.md  patch-note.md  prd.md  prototype.md  submit-for-testing.md  tech-spec.md  test-plan.md  test-report.md
.cronymax/migrations/: event-bus-v1.done
.github/workflows/: ci.yml  release.yml
app/browser/: .clang-tidy  app.cc  app.h  app_delegate.cc  app_delegate.h  bridge_handler.cc  bridge_handler.h  bridge_registry.cc  bridge_registry.h  client_handler.cc  client_handler.h  desktop_app.cc  desktop_app.h  icon_data.h  icon_registry.cc  icon_registry.h  icon_registry_mac.mm  mac_folder_picker.h  mac_folder_picker.mm  mac_view_style.h  mac_view_style.mm  main.cc  main_mac.mm  main_window.cc  main_window.h  profile_store.cc  space_manager.cc  space_manager.h  tab.cc  tab.h  tab_behavior.h  tab_manager.cc  tab_manager.h  tab_toolbar.cc  tab_toolbar.h
app/common/: observer_list.h  path_utils.cc  path_utils.h  types.h  uuid_v7.cc  uuid_v7.h
app/event_bus/: app_event.cc  app_event.h  event_bus.cc  event_bus.h
app/renderer/: app.cc  app.h  main.cc
app/runtime/: crony_bridge.cc  crony_bridge.h  crony_proxy.cc  crony_proxy.h  layout_migrator.cc  layout_migrator.h  layout_migrator_test.cc  legacy_importer.cc  legacy_importer.h  profile_store.cc  profile_store.h  space_manager.cc  space_manager.h  space_store.cc  space_store.h  workspace_id.cc  workspace_id.h
app/workspace/: flow_yaml.cc  flow_yaml.h  space_store.cc  space_store.h  workspace_layout.cc  workspace_layout.h
assets/builtin-doc-types/: bug-report.yaml  code-description.yaml  freeform.yaml  patch-note.yaml  prd.yaml  prototype.yaml  submit-for-testing.yaml  tech-spec.yaml  test-plan.yaml  test-report.yaml
assets/icons/: README.md
assets/installer/: AppIcon.icns  README.txt
cmake/: CefDist.cmake  CefSubmodule.cmake  CronymaxApp.cmake  GenerateIconData.cmake  RustRuntime.cmake  cef-version.env
crates/cronygraph/: Cargo.toml  README.md
crates/cronygraph/src/: checkpoint.rs  engine.rs  graph.rs  lib.rs  middleware.rs  node.rs  orchestration.rs  orchestrator.rs  routing.rs  state.rs  types.rs
crates/cronymax/: Cargo.toml
crates/cronymax/src/: config.rs  lib.rs  lifecycle.rs
crates/cronymax/src/agent_loop/: compaction.rs  mod.rs  react.rs  tools.rs
crates/cronymax/src/capability/: agent_loader.rs  browser.rs  code_search.rs  dispatcher.rs  factory.rs  filesystem.rs  flow_tools.rs  git.rs  mod.rs  notify.rs  shell.rs  submit_document.rs  test_runner.rs  tier.rs
crates/cronymax/src/crony/: mod.rs
crates/cronymax/src/crony/prompts/: reflect.md  system.md
crates/cronymax/src/document/: mod.rs  store.rs
crates/cronymax/src/flow/: definition.rs  document.rs  gitignore.rs  mention_parser.rs  mod.rs  registry.rs  router.rs  runtime.rs  trace.rs  watcher.rs  workspace_layout.rs
crates/cronymax/src/llm/: anthropic.rs  capabilities.rs  config.rs  copilot_auth.rs  copilot_cache.rs  factory.rs  messages.rs  migration.rs  mock.rs  mod.rs  openai.rs  provider.rs  registry.rs  stream.rs
crates/cronymax/src/memory/: embedder.rs  mod.rs  namespace.rs  search.rs
crates/cronymax/src/protocol/: capabilities.rs  control.rs  dispatch.rs  envelope.rs  events.rs  mod.rs  session.rs  transport.rs  version.rs
crates/cronymax/src/runtime/: agent_runner.rs  authority.rs  chat_store.rs  handler.rs  middleware.rs  mod.rs  persistence.rs  prompt.rs  run_context.rs  services.rs  sessions.rs  state.rs
crates/cronymax/src/sandbox/: broker.rs  fs_gate.rs  mod.rs  policy.rs  shell_gate.rs
crates/cronymax/src/terminal/: mod.rs  pty.rs  session_manager.rs
crates/cronymax/src/workspace/: agent_registry.rs  agents.rs  doc_types.rs  file_broker.rs  flow_yaml.rs  flows.rs  layout.rs  mod.rs  prompts.rs
crates/cronymax/tests/: agent_runner_test.rs  coding_agent.rs  runtime_e2e.rs
crony/: Cargo.toml
crony/include/: crony.h
crony/src/: boundary.rs  ffi.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  supervisor.rs
crony/tests/: c_abi_client.rs  gips_transport.rs
docs/: activity-panel.md  architecture.md  book.toml  coding-agent.md  document_workbench.md  document_workbench_migration.md  flows_quickstart.md  multi_agent_orchestration.md  native-views-mvc.md  native_title_bar.md  one_week_mvp.md  optimize-chat-ux.md  orchestration_ui.md  popover_ux.md  renderer-runtime-bridge.md  runtime-layered-di.md  theme-aware-view.md  ui_theme_tokens.md  workspace-profiles.md  workspace_with_profile_design.md
docs/src/: SUMMARY.md  agent-middleware.md  architecture.md  contributing.md  features.md  getting-started.md  index.md  multi-agent-orchestration.md
scripts/: check-line-count.sh  gen_orchestration.py  verify-release.sh
src/: config.rs  lib.rs  main.rs
src/ai/: agent.rs  agent_loop.rs  budget.rs  chat.rs  clawhub.rs  context.rs  markdown.rs  memory_agent.rs  middleware.rs  mod.rs  orchestration.rs  skills.rs  stream.rs
src/app/: browser.rs  chat.rs  cmd.rs  commands.rs  events.rs  keybindings.rs  keybinds.rs  mod.rs  mouse.rs  render.rs  session_persist.rs  state.rs  tabs.rs  util.rs  webview.rs  window.rs
src/channel/: agent_loop.rs  config.rs  memory.rs  mod.rs
src/channels/: agent_loop.rs  config.rs  memory.rs  mod.rs
src/profile/: manager.rs  mod.rs  permissions.rs  webview.rs
src/renderer/: atlas.rs  bridge.rs  cursor.rs  egui.rs  frame.rs  mod.rs  overlay.rs  panel.rs  panels.rs  quad.rs  scheduler.rs  text.rs  webview.rs  (+1 more)
tests/: all.rs
tools/: assign_block_ids.cc  migrate_review_anchors.cc  native_probe.cc  rebuild_trace.cc
web/: biome.json  components.json  eslint.config.js  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
(+544 files in other folders)
