[package]
name = "cronymax"
version = "0.1.0"
edition = "2024"
description = "AI native terminal emulator with integrated webview"
license = "MIT"

[dependencies]
wgpu = "28"
winit = "0.30"
raw-window-handle = "0.6"
glyphon = "0.10"
egui = { version = "0.31", features = ["serde"] }
egui-winit = { version = "0.31", default-features = false, features = [
  "clipboard",
  "links",
  "wayland",
  "x11",
] }
alacritty_terminal = "0.25"
portable-pty = "0.9"
wry = "0.54"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
toml_edit = "0.22"
log = "0.4"
env_logger = "0.11"
arboard = "3.6"
linkify = "0.10"
regex = "1"
egui_tiles = { version = "0.12", default-features = false }
rfd = "0.15"
nucleo = "0.5"
ignore = "0.4"
dirs = "6"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
tokio = { version = "1", features = ["full"] }
async-openai = "0.27"
tiktoken-rs = "0.6"
egui_commonmark = { version = "0.20", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
chrono = { version = "0.4", features = ["serde"] }
smart-default = "0.7.1"
flate2 = "1"
croner = "2"
fastembed = "5"
serde_yaml = "0.9"
which = "7"
thiserror = "2"
hostname = "0.4"
urlencoding = "2"
keyring = { version = "3.6", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSButton",
  "NSControl",
  "NSView",
  "NSColor",
  "NSPanel",
  "NSResponder",
  "NSGraphics",
  "NSEvent",
  "block2",
] }
objc2-foundation = "0.3"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
winreg = "0.56"

[dev-dependencies]
