[workspace]
resolver = "2"
members = [
    "crony",
    "crates/cronymax",
    "crates/cronygraph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Proprietary"
publish = false

[workspace.dependencies]
# Internal crates
cronymax = { path = "crates/cronymax" }
cronygraph = { path = "crates/cronygraph" }

# In-house GIPS IPC (https://github.com/funelk/gips). Pinned to a
# branch revision; bump deliberately when the upstream API moves.
gips = { git = "https://github.com/funelk/gips", branch = "main", default-features = false, features = ["tracing"] }

# External — kept narrow on purpose. Add only when a task needs them.
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "process", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
notify = "6"
portable-pty = "0.8"
regex = "1"
serde_yml = "0.0"
sha2 = "0.10"
security-framework = { version = "3", optional = false }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"

[profile.dev]
opt-level = 0
debug = true
