[package]
name = "crony"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "CEF integration wrapper for the cronymax runtime. Owns the standalone process lifecycle and the C FFI surface."

[lib]
# `staticlib` so CMake can link directly into the CEF host without a
# second dynamic dependency. Switch to `cdylib` later if we want a
# loadable bundle.
name = "crony"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "crony"
path = "src/main.rs"

[dependencies]
cronymax = { workspace = true }
gips = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
