[package]
name = "cronygraph"
version = "0.1.0"
edition = "2024"
description = "CronyGraph — LangGraph-inspired multi-agent orchestration framework for Rust"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
regex = "1"
anyhow = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
