[package]
name = "cronymax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Cronymax Rust runtime authority. C-FFI-less; integrated with the host through `crony`."

[lib]
path = "src/lib.rs"

[dependencies]
cronygraph = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
nix = { workspace = true }
notify = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
serde_yml = { workspace = true }
sha2 = { workspace = true }
security-framework = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
